# woolfinder

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: settings.py
wool_base/: admin.py  apps.py  models.py  tests.py
wool_base/management/commands/: refresh_wool_base.py
wool_base/migrations/: 0001_initial.py
wool_base/scrapers/: abstract.py  wollplatz_scraper.py
