[project]
name = "woolfinder"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Shevelev",email = "dimetros.shevelev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "cloudscraper (>=1.2.71,<2.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "lxml (>=5.0.0,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
